--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,21 @@
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
+body{
+  background: url('/public/bg.jpg');
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  color: white;
+}
+
+.container{
+  width: 90vw;
+  height: 90vh;
+  background-color: rgba(17, 25, 40, 0.39);
+  backdrop-filter: blur(19px) saturate(190%);
+  border-radius: 12px;
+  display: flex;
+}
