--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -53,6 +53,11 @@
                 border-radius: 5px;
                 cursor: pointer;
                 font-weight: 500;
+
+                &:disabled{
+                    cursor:not-allowed;
+                    background-color: #278ee897;
+                }
             }
         }
     }
