--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,10 @@ body{
   border-radius: 12px;
   display: flex;
 }
+
+.loading{
+  padding: 30px;
+  font-size: 15px;
+  border-radius: 10px;
+  background-color: rgba(17, 25, 40, 0.9);
+}
