--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -140,6 +140,11 @@
             padding: 10px;
             border-radius: 8px;
             font-size: 12px;
+            
+            &:disabled{
+                background-color: #5182feb2;
+                cursor: not-allowed;
+            }
         }
 
         .emoji{
@@ -159,6 +164,11 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+
+            &:disabled{
+                background-color: #5182feb2;
+                cursor: not-allowed;
+            }
         }
     }
 }
